<resources>
    <string name="app_name">Prova16_03</string>
    <string name="type_email_address">Type email address</string>
    <string name="log_in_to_your_account">log in to your account</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_for_a_new_account">sign up for a new account</string>
    <string name="type_password">Type password</string>
</resources>